[package]
name = "const-identify"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Generates unique ids that can be used at compile time."
homepage = "https://github.com/rhedgeco/const-identify/"
repository = "https://github.com/rhedgeco/const-identify/"
readme = "README.md"
keywords = ["const", "id", "sorting", "static", "compiled"]

[dependencies]
const-fnv1a-hash = "1.1"
const-identify-derive = { path = "./derive", version = "0.1" }
